--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,16 @@
-<html>
-    <head>
-        <title>Home</title>
-        
-    </head>
-    <body>
-        <h1>Home</h1>
-        <p>Welcome to the home page!</p>
-        
-        {% for course in courses%}
-        <h1>{{ course.category}}</h1>
-            <h2>{{ course.title}}</h2>
-            <p>{{ course.description }}</p>
-        {% endfor %}
-    </body>
-    
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    {%if user.is_authenticated%}
+        <h1>Welcome, {{user.username}}</h1>
+        <p>Click <a href="{% url 'logout' %}">here</a> to logout.</p>
+    {%else%}
+        <h1>Welcome to CodeUz</h1>
+        <p>CodeUz is a platform for learning programming languages.</p>
+        <p>Click <a href="{% url 'login' %}">here</a> to login.</p>
+    {%endif%}
+    <h1>Welcome to CodeUz</h1>
+    <p>CodeUz is a platform for learning programming languages.</p>
+{% endblock %}
