--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Login | CodeUz{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="card shadow-lg p-4 w-100" style="max-width: 400px; border-radius: 10px;">
+    
+
+    </div>
+</div>
+
+
 {% endblock %}
